[gd_scene load_steps=5 format=2]

[ext_resource path="res://enemy_bullet/Butterfly_Bullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemy_bullet/Enemy_Bullet.gd" type="Script" id=2]
[ext_resource path="res://enemy_bullet/Pinecone_Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://enemy_bullet/Moth_Bullet.tscn" type="PackedScene" id=4]

[node name="Enemy_Bullet" type="Node2D"]
script = ExtResource( 2 )

[node name="Butterfly_Bullet" parent="." instance=ExtResource( 1 )]

[node name="Pinecone_Bullet" parent="." instance=ExtResource( 3 )]

[node name="Moth_Bullet" parent="." instance=ExtResource( 4 )]
